# Tessely-App

./: tmpclaude-555a-cwd
backend/: .gitignore  .pre-commit-config.yaml  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/lore/: api_setup.md  auth_endpoints.md  auth_models.md  auth_service.md  config.md  core_constants.md  dependencies.md  secrets.md
backend/src/api/: api.py  dependencies.py  router.py
backend/src/api/endpoints/: auth.py  csv_datasource.py  process_mining.py
backend/src/core/: config.py  constants.py  messages.py  secrets.py  supabase_client.py
backend/src/models/: auth.py  process_mining.py
backend/src/services/: auth_service.py  process_mining_service.py
backend/src/tests/oauth/: README.md  oauth_test.html
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tmpclaude-1f14-cwd  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.tsx  ProtectedRoute.tsx  index.css  main.tsx  theme.ts  types.ts  vite-env.d.ts
frontend/src/api/: auth.tsx  datasource.tsx  processMining.ts
frontend/src/components/: AuthNavBar.tsx  Footer.tsx  Navbar.tsx
frontend/src/components/pages/: About.tsx  Careers.tsx  Contact.tsx  Dashboard.tsx  ForgotPassword.tsx  HowItWorks.tsx  Landing.tsx  Login.tsx  Pricing.tsx  Solutions.tsx  UseCase.tsx
frontend/src/components/pages/Auth_Pages/: DataSources.tsx  MainDashboard.tsx  Processes.tsx
frontend/src/components/pages/LandingPage/: About.tsx  Careers.tsx  Contact.tsx  Dashboard.tsx  HowItWorks.tsx  (+3 more)
frontend/src/styles/: globals.css
(+15 files in other folders)
