[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "supabase-api-scaffolding"
version = "0.1.0"
description = "FastAPI backend with Supabase integration"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
exclude = ["src/tests"]

[[tool.mypy.overrides]]
module = ["google.*", "supabase.*"]
ignore_missing_imports = true
